--- a/AspDotNet/Views/Home/Index.cshtml
+++ b/AspDotNet/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
                <h3 class="text-danger">Email Service</h3>
                <div class="my-2 p-2 d-flex flex-row gap-3 justify-content-space-between align-items-center">
                    <a href="/email/inbox" class="btn btn-primary">Inbox</a>
-                   <a href="#" class="btn btn-info">New Email</a>
+                   <a href="/email/send" class="btn btn-info">New Email</a>
                </div>
            </div>
        </div>
