Location access functionality in web

--- a/AspDotNet/Views/Home/Index.cshtml
+++ b/AspDotNet/Views/Home/Index.cshtml
@@ -11,10 +11,18 @@
      <h1>I developed functionalities</h1>
        <div class="my-3 d-flex flex-column">
            <div class="P-3 d-flex flex-column">
-               <h3 class="text-danger">Email Service</h3>
-               <div class="my-2 p-2 d-flex flex-row gap-3 justify-content-space-between align-items-center">
-                   <a href="/email/inbox" class="btn btn-primary">Inbox</a>
-                   <a href="/email/send" class="btn btn-info">New Email</a>
+               <div class="my-2 border border-1 border-secondary">
+                   <h3 class="text-danger">Email Service</h3>
+                   <div class="my-2 p-2 d-flex flex-row gap-3 justify-content-space-between align-items-center">
+                       <a href="/email/inbox" class="btn btn-primary">Inbox</a>
+                       <a href="/email/send" class="btn btn-info">New Email</a>
+                   </div>
+               </div>
+               <div class="my-2 border border-1 border-secondary">
+                   <h3 class="text-danger">Access Location</h3>
+                   <div class="my-2 p-2 d-flex flex-row gap-3 justify-content-space-between align-items-center">
+                       <a href="/location" class="btn btn-primary">Open Form</a>
+                   </div>
                </div>
            </div>
        </div>
