Usage of Nested Model

--- a/AspDotNet/Views/Home/Index.cshtml
+++ b/AspDotNet/Views/Home/Index.cshtml
@@ -24,6 +24,12 @@
                        <a href="/location" class="btn btn-primary">Open Form</a>
                    </div>
                </div>
+               <div class="my-2 border border-1 border-secondary">
+                   <h3 class="text-danger">Nested User Model Exampple</h3>
+                   <div class="my-2 p-2 d-flex flex-row gap-3 justify-content-space-between align-items-center">
+                       <a href="/User/Index" class="btn btn-primary">Show Users</a>
+                   </div>
+               </div>
            </div>
        </div>
 </div>
