Image Cached Functionality URL and Disk Cached

--- a/AspDotNet/Views/Home/Index.cshtml
+++ b/AspDotNet/Views/Home/Index.cshtml
@@ -25,9 +25,18 @@
                    </div>
                </div>
                <div class="my-2 border border-1 border-secondary">
-                   <h3 class="text-danger">Nested User Model Exampple</h3>
+                   <h3 class="text-danger">Nested User Model Example</h3>
                    <div class="my-2 p-2 d-flex flex-row gap-3 justify-content-space-between align-items-center">
                        <a href="/User/Index" class="btn btn-primary">Show Users</a>
+                   </div>
+               </div>
+               <div class="my-2 border border-1 border-secondary">
+                   <h3 class="text-danger">Nested User Model Example</h3>
+                   <div class="my-2 p-2 d-flex flex-row gap-3 justify-content-space-between align-items-center">
+                       <a href="/Image/CacheImageUrl" class="btn btn-primary">Cached Image Url</a>
+                   </div>
+                   <div class="my-2 p-2 d-flex flex-row gap-3 justify-content-space-between align-items-center">
+                       <a href="/Image/CacheImage" class="btn btn-primary">Cached Image</a>
                    </div>
                </div>
            </div>
